add both log4cxx and program options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required (VERSION 3.10.2)
 project(email2jira)
 
+find_package(Boost 1.65.1 COMPONENTS program_options system)
+
 find_library(LOG4CXX_LIBRARY log4cxx)
 
 set(${CMAKE_PROJECT_NAME}_SOURCE ./src/main.cpp)
 
 add_executable (${CMAKE_PROJECT_NAME} ${${CMAKE_PROJECT_NAME}_SOURCE})
 
-target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC ${LOG4CXX_LIBRARY})
+target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC ${LOG4CXX_LIBRARY} ${Boost_LIBRARIES})
