--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,8 @@ find_library(LOG4CXX_LIBRARY log4cxx)
 
 set(${CMAKE_PROJECT_NAME}_SOURCE ./src/main.cpp
                                  ./src/Email2JiraImpl.cpp
-                                 ./src/ImapAdapterImpl.cpp)
+                                 ./src/ImapAdapterImpl.cpp
+                                 ./src/CertVerifierImpl.cpp)
 
 add_executable (${CMAKE_PROJECT_NAME} ${${CMAKE_PROJECT_NAME}_SOURCE})
 
